--- a/style.css
+++ b/style.css
@@ -30,7 +30,92 @@ body{
     width: 100%;
 }
 
+.player-controls {
+    display: flex;
+    position:absolute;
+    bottom :0;
+    width:100%;
+    transform:translateY(100%) translateY(-5px);
+    transition:.3s;
+    flex-wrap:wrap;
+    background:#FFFDED;
+}
+
+.video-player:hover .player-controls{
+    transform: translateY(0%);
+}
+
+.play-button {
+    width:5%;
+    height:120%;
+    border:none;
+    background: #FFFDED;
+    color:#FFEA29;
+    padding:5px 2px;
+
+}
+
+.play-button:focus {
+    outline:none
+}
+
+
 .time{
     font-size:1em;
-    color:whitesmoke
+    color:#5433CC;
+    width:20%;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: content;
+}
+
+
+input[type='range'] {
+    -webkit-appearance: none;
+    background: transparent;
+    margin:0;
+    width:75%;
+    padding: 0 10px;
+}
+
+input[type='range']:focus {
+    outline:none;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+    width:100%;
+    height:8px;
+    cursor:pointer;
+    background:#5433CC
+}
+
+input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height:8px;
+    width:15px;
+    background: #FFEA29;
+    cursor:pointer
+}
+
+.video-progress{
+    position:relative;
+    display: flex;
+    width:100%;
+    height:20px;
+    transition:.3s;
+    background: rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+
+}
+
+.video-progress-filled{
+    width:0%;
+    background:#FFEA29;
+
+}
+
+.video-player:hover .video-progress {
+    height:15px;
 }
